welcome.lessons.welcome.array.island.Island.scala.error
island:14: error: not found: value peut_compter
        peut_compter == false
        ^island:20: error: not found: value peut_compter
        peut_compter == false
        ^